# jumpfile

./: README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
jumpfile/: __main__.py  cli.py  settings.toml
jumpfile/configs/: config.py
jumpfile/etl/extract/: extract_http.py  extract_zip.py
jumpfile/repository/: file_repository.py
jumpfile/service/: excel_service.py
