[tool.poetry]
name = "jumpfile"
version = "0.1.0"
description = ""
authors = ["hsdanield <hsdanield@gmail.com>"]
readme = "README.md"
include = ["jumpfile/settings.toml"]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.11"
rich = "^13.3.1"
typer = "^0.7.0"
pandas = "^1.5.3"
openpyxl = "^3.1.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
jupyterlab = "^3.6.1"

[tool.poetry.scripts]
jumpfile = "jumpfile.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
